# primeclue

./: README.md
backend/: Cargo.toml
backend/primeclue/: Cargo.toml
backend/primeclue-api/: Cargo.toml
backend/primeclue-api/examples/: execute_for_best.rs  import_big.rs  median_check.rs  mnist_fashion_median_check.rs  test_training.rs
backend/primeclue-api/src/: classifier.rs  data.rs  executor.rs  main.rs  rest.rs
backend/primeclue/benches/: bench.rs
backend/primeclue/src/: contrand.rs  error.rs  lib.rs  math.rs  rand.rs  user.rs
backend/primeclue/src/data/: common.rs  data_set.rs  expression.rs  importer.rs  input.rs  mod.rs  outcome.rs
backend/primeclue/src/exec/: class_training.rs  classifier.rs  functions.rs  mod.rs  node.rs  score.rs  scored_tree.rs  training_group.rs  tree.rs
backend/primeclue/src/serialization/: deserializable.rs  mod.rs  serializable.rs  serializator.rs
frontend/: .eslintrc.js  build.sh  package-lock.json  package.json
frontend/src/components/basic/: AsyncProgress.vue
frontend/src/components/classifier/: ClassifierCreate.vue  ClassifiersWindow.vue
frontend/src/components/data/: DataList.vue  DataTable.vue
