[package]
name = "primeclue-api"
version = "0.4.0"
authors = ["Łukasz Wojtów <lukasz.wojtow@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
primeclue = {path = "../primeclue" }
actix-web = "1"
actix-cors = "0.1"
jemallocator = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
human-panic = "1"
rand = "0.8"
threadpool = "1"

